<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?primaryBackgroundStyle"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="1dp">

                <Button
                    android:id="@+id/buttonCalibrateWater"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateWaterClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/waterCalibrate"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle" />

                <Button
                    android:id="@+id/buttonCalibrateSoil"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateSoilClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/soilCalibrate"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle" />

                <Button
                    android:id="@+id/buttonStripTest"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onStripTestsClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/stripTest"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonColiforms"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onColiformsClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Coliforms"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/link"
                        android:layout_marginBottom="7dp"
                        android:gravity="center_horizontal"
                        android:text="@string/to_get_started"
                        android:textColor="#b4ffffff"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/textVersionExpiry"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="100dp"
                        android:gravity="center_horizontal"
                        android:onClick="onGetStartedClicked"
                        android:text="http://ffem.io/start"
                        android:textColor="@color/text_links_2"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textVersionExpiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        android:ellipsize="none"
                        android:gravity="center_horizontal"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="#b4ffffff"
                        android:textSize="12dp"
                        android:visibility="gone"
                        tools:ignore="SpUsage"
                        tools:text="Version expires: 15 Jan 2018"
                        tools:visibility="visible" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutDiagnostics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textDiagnostics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="@dimen/text_margin_bottom"
                android:clickable="false"
                android:ellipsize="none"
                android:gravity="start"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#4301bc77"
                android:textSize="46dp"
                tools:ignore="SpUsage" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDisableDiagnostics"
                style="@style/floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textDiagnostics"
                android:layout_alignParentEnd="true"
                android:onClick="onDisableDiagnosticsClick"
                android:src="@drawable/ic_revert_24dp"
                app:backgroundTint="@color/diagnostic"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>