...
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="3dp"
                android:textSize="32sp"
                tools:text="Fluoride" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:paddingBottom="15dp"
...
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="60sp"
                    tools:text="15000" />
...
